<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Events">

    <TextView
        android:id="@+id/numOfTickets"
        android:layout_width="41dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="185dp"
        android:layout_marginEnd="185dp"
        android:layout_marginBottom="235dp"
        android:fontFamily="@font/montserrat"
        android:text="2"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/orderTotal2"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="236dp"
        android:fontFamily="@font/montserrat"
        android:text="Number of tickets:"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/navigationBackground"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@+id/congrats"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="Congratulations!!"
        android:textColor="@android:color/black"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="136dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:text="Sat 14 March 2020\n2100 to 0400"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="298dp"
        android:layout_marginBottom="196dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/location2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="149dp"
        android:fontFamily="@font/montserrat"
        android:text="Date/Time:"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/location3"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="103dp"
        android:fontFamily="@font/montserrat"
        android:text="Additional fee:"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="179dp"
        android:fontFamily="@font/montserrat"
        android:text="Cantina, Tatooine, Mos Eisley, Splatatooie, ME0 0TT"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/orderTotal"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="273dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/order"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="272dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/total"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/total3"
        android:layout_width="41dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="102dp"
        android:fontFamily="@font/montserrat"
        android:text="£0.30"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="562dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/festivalName"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="510dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/festive"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="204dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="307dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/coachella" />


</RelativeLayout>